# engram

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  engram.toml  engram.toml.example
.github/workflows/: audit.yml  benchmark.yml  release.yml
ci/: engram-notify.yml  release.yml
crates/engram-atlas/: Cargo.toml  README.md
crates/engram-atlas/src/: agent.rs  gap_detector.rs  lib.rs  module_summarizer.rs  onboarding_generator.rs  prompts.rs
crates/engram-core/: .gitignore  Cargo.toml  README.md  build.rs
crates/engram-core/src/: claude_client.rs  config.rs  event_router.rs  main.rs  notion_client.rs  scheduler.rs  setup.rs  webhook.rs
crates/engram-decisions/: Cargo.toml  README.md
crates/engram-decisions/src/: agent.rs  drift_scorer.rs  lib.rs  prompts.rs  rfc_lifecycle.rs
crates/engram-health/: Cargo.toml  README.md
crates/engram-health/src/: agent.rs  digest_generator.rs  lib.rs  prompts.rs  score_computer.rs
crates/engram-pulse/: Cargo.toml  README.md
crates/engram-pulse/src/: agent.rs  benchmark_parser.rs  lib.rs  prompts.rs  regression_detector.rs
crates/engram-release/: Cargo.toml  README.md
crates/engram-release/src/: agent.rs  lib.rs  notes_generator.rs  prompts.rs
crates/engram-review/: Cargo.toml  README.md
crates/engram-review/src/: agent.rs  debt_tracker.rs  lib.rs  pattern_extractor.rs  pr_analyzer.rs  prompts.rs
crates/engram-shield/: Cargo.toml  README.md
crates/engram-shield/src/: agent.rs  audit_parser.rs  cve_deduplicator.rs  lib.rs  prompts.rs
crates/engram-timeline/: Cargo.toml  README.md
crates/engram-timeline/src/: agent.rs
crates/engram-types/: Cargo.toml  README.md
crates/engram-types/src/: clients.rs  config.rs  events.rs  lib.rs  notion_schema.rs
crates/engram-vault/: Cargo.toml  README.md
crates/engram-vault/src/: agent.rs  env_differ.rs  env_parser.rs  lib.rs  prompts.rs  rotation_checker.rs
dashboard/: demo.js  index.html
packaging/: build-all.sh
packaging/arch/: PKGBUILD
packaging/darwin/: install.sh
packaging/debian/: build.sh
packaging/launchd/: com.engram.daemon.plist
packaging/rpm/: engram.spec
packaging/systemd/: engram.service
packaging/windows/: install.ps1
scripts/: build.sh  clean-seed.sh  demo-seed.sh  setup.sh  test.sh
