[workspace]
resolver = "2"
members = [
    "crates/engram-core",
    "crates/engram-types",
    "crates/engram-decisions",
    "crates/engram-pulse",
    "crates/engram-shield",
    "crates/engram-atlas",
    "crates/engram-vault",
    "crates/engram-review",
    "crates/engram-health",
    "crates/engram-timeline",
    "crates/engram-release",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/manojpisini/engram"
homepage = "https://github.com/manojpisini/engram"
authors = ["Manoj Pisini <manojpisini.dev@gmail.com>"]
categories = ["development-tools", "web-programming"]
keywords = ["notion", "engineering-intelligence", "ai", "github", "devtools"]
description = "Engineering Intelligence Platform — 9 AI agents that analyze your codebase and write structured intelligence to Notion"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Regex
regex = "1"

# HMAC for webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Environment
dotenvy = "0.15"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Embedded assets
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
mime_guess = "2"

# Shared types
engram-types = { version = "1.0.0", path = "crates/engram-types" }
engram-decisions = { version = "1.0.0", path = "crates/engram-decisions" }
engram-pulse = { version = "1.0.0", path = "crates/engram-pulse" }
engram-shield = { version = "1.0.0", path = "crates/engram-shield" }
engram-atlas = { version = "1.0.0", path = "crates/engram-atlas" }
engram-vault = { version = "1.0.0", path = "crates/engram-vault" }
engram-review = { version = "1.0.0", path = "crates/engram-review" }
engram-health = { version = "1.0.0", path = "crates/engram-health" }
engram-timeline = { version = "1.0.0", path = "crates/engram-timeline" }
engram-release = { version = "1.0.0", path = "crates/engram-release" }
