[package]
name = "engram-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Module documentation, onboarding, and knowledge gap detection agent for ENGRAM"
readme = "README.md"
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
