[package]
name = "engram-health"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Engineering health scoring and weekly digest agent for ENGRAM"

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
