[package]
name = "engram-pulse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark tracking and regression detection agent for ENGRAM"

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
