[package]
name = "engram-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PR analysis, tech debt tracking, and automated code review agent for ENGRAM"

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
