[package]
name = "engram-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-agent event correlation and audit trail agent for ENGRAM"

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
