[package]
name = "engram-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, config, events, and Notion schemas for ENGRAM"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
