[package]
name = "engram-vault"
version.workspace = true
edition.workspace = true

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
