[package]
name = "engram-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Environment config diffing and secret rotation tracking agent for ENGRAM"

[dependencies]
engram-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
